# fake_news-classifier

./: .gitignore  README.md  config.toml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
notebooks/: dataset_analysis.ipynb  full_pipeline.ipynb  full_test_xqb_pipeline.ipynb  headline-body_relation_analysis.ipynb  xgb_train.ipynb
src/features/: fake_news_classifier.py  preprocessing.py
tests/: test_features.py
