[metadata]
name = fake_news-classifier
description = Fake news classifier experiment
author = Tub1s
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages =
    features
install_requires = 
    numpy>=1
    pandas>=1
    scikit-learn>=1
    matplotlib>=3
python_requires = >=3.10
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=7.0
    mypy>=0.971
    flake8>=5.0
    tox>=3.26

[options.package_data]
features = py.typed

[flake8]
max-line-length = 160